// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FraudReport renders just the input choices by default 1`] = `
<Fragment>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": false,
          "label": "Yes (explain below)",
          "value": "Yes",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "No",
        },
      ]
    }
    hint={
      <Details
        label="What counts as paid leave fraud?"
      >
        <ul
          className="usa-list"
        >
          <li>
            Using someone’s personal information to fraudulently collect benefits
          </li>
          <li>
            Providing forged or falsified documents
          </li>
          <li>
            Withholding information or providing false information to the Department of Family and Medical Leave
          </li>
        </ul>
      </Details>
    }
    label={
      <ReviewHeading
        level="2"
      >
        Do you have any reason to suspect this is fraud?
      </ReviewHeading>
    }
    name="fraud"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value=""
  />
  <ConditionalContent
    visible={false}
  >
    <Alert
      heading="You are reporting fraud."
      state="warning"
    >
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="components.employersFraudReport.alertBody"
      />
    </Alert>
  </ConditionalContent>
</Fragment>
`;

exports[`FraudReport renders just the input choices by default 2`] = `
Array [
  "We take allegations about fraud seriously. Selecting this will begin further investigation. Please only select if you are convinced this is fraudulent. If you have questions, feel free to call us at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " from 8am‑5pm ET.",
]
`;

exports[`FraudReport renders the alert if "Yes" is selected 1`] = `
<Fragment>
  <InputChoiceGroup
    choices={
      Array [
        Object {
          "checked": true,
          "label": "Yes (explain below)",
          "value": "Yes",
        },
        Object {
          "checked": false,
          "label": "No",
          "value": "No",
        },
      ]
    }
    hint={
      <Details
        label="What counts as paid leave fraud?"
      >
        <ul
          className="usa-list"
        >
          <li>
            Using someone’s personal information to fraudulently collect benefits
          </li>
          <li>
            Providing forged or falsified documents
          </li>
          <li>
            Withholding information or providing false information to the Department of Family and Medical Leave
          </li>
        </ul>
      </Details>
    }
    label={
      <ReviewHeading
        level="2"
      >
        Do you have any reason to suspect this is fraud?
      </ReviewHeading>
    }
    name="fraud"
    onChange={[Function]}
    smallLabel={true}
    type="radio"
    value=""
  />
  <ConditionalContent
    visible={true}
  >
    <Alert
      heading="You are reporting fraud."
      state="warning"
    >
      <Trans
        components={
          Object {
            "contact-center-phone-link": <a
              href="tel:(833) 344-7365"
            />,
          }
        }
        i18nKey="components.employersFraudReport.alertBody"
      />
    </Alert>
  </ConditionalContent>
</Fragment>
`;

exports[`FraudReport renders the alert if "Yes" is selected 2`] = `
Array [
  "We take allegations about fraud seriously. Selecting this will begin further investigation. Please only select if you are convinced this is fraudulent. If you have questions, feel free to call us at ",
  <a
    href="tel:(833) 344-7365"
    key="1"
  >
    (833) 344‑7365
  </a>,
  " from 8am‑5pm ET.",
]
`;
